<resources>
    <string name="app_name">Purrsonal Trainer</string>
    <!-- Landing, Login and Register Labels -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="google_sso">Login with Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resetApp">Reset App</string>
    <string name="logOut">Log Out</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome!</string>
    <string name="welcomeBack">Welcome\nBack!</string>
    <string name="firebase_web_client_id" translatable="false">859936099389-19fcm5qa1m50jqb04hot8jqbjl12oc9m.apps.googleusercontent.com</string>
    <!-- Home Labels -->
    <string name="home">Home</string>
    <string name="accountDetails">Account Details</string>
    <string name="catSettings">Cat Settings</string>
    <string name="statistics">Statistics</string>
    <string name="settingsTitle">Settings</string>
    <string name="routines">Routines</string>
    <string name="yourRoutines">Your Routines</string>
    <string name="newRoutine">New Routine</string>
    <string name="untitledRoutine">Untitled Routine</string>
    <string name="routineDetails">Routine Details</string>
    <string name="quickStart">Quick Start</string>
    <string name="workout">Workout</string>
    <string name="startEmptyWorkout">Start Empty Workout</string>
    <string name="notes">Notes</string>
    <string name="addExercises">Add Exercises</string>
    <string name="addExercise">Add Exercise</string>
    <string name="workoutType">Workout Type</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="bodyWeight">Body Weight:</string>
    <string name="yourExercises">Your Exercises</string>

    <string-array name="set_type_options">
        <item>W</item>
        <item>1</item>
        <item>F</item>
        <item>D</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="background">background</string>
    <string name="email_text_view">email text view</string>
    <string name="reset_app_button">Reset App Button</string>
    <string name="log_out_button">Log out button</string>
    <string name="done_button">Done Button</string>
    <string name="please_re_enter_your_password">Please re-enter your password</string>
    <string name="analysis">Analysis</string>
    <string name="records">Records</string>
    <string name="placeholder_rm">0 RM</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="colour">Colour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_text_view">password text view</string>
</resources>