<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.settings_activities.AccountDetailsActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg_cogs" />

    <za.co.varsitycollege.st10204902.purrsonaltrainer.frontend_logic.GradientTextView
        android:id="@+id/AccountDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/accountDetails"
        android:text="@string/accountDetails"
        android:fontFamily="@font/knicknack_black"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        app:startColor="@color/pale_sky_blue"
        app:endColor="@color/deep_cyan_blue"
        app:strokeColor="@color/default_stroke_color"
        app:strokeWidth="15dp"/>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/email"
        android:contentDescription="@string/email_text_view"
        android:fontFamily="@font/rounded"
        android:textSize="22sp"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@+id/AccountDetailsTitle"
        android:textColor="@color/hint_text"/>

    <EditText
        android:id="@+id/emailInput"
        android:enabled="false"
        android:layout_width="match_parent"
        android:autofillHints="emailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="0dp"
        android:background="@drawable/userinput_design"
        android:textSize="25sp"
        android:hint="@string/email"
        android:textColor="@color/hint_text"
        android:fontFamily="@font/rounded"
        android:paddingVertical="25dp"
        android:paddingHorizontal="30dp"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:fontFamily="@font/rounded"
        android:textSize="22sp"
        android:contentDescription="@string/password_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        android:layout_margin="35dp"
        android:textColor="@color/hint_text"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordInput"
        android:hint="new password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:labelFor="@id/passwordInput"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        android:layout_marginTop="0dp"
        android:background="@drawable/userinput_design"
        android:textSize="25sp"
        android:textColor="@color/hint_text"
        android:fontFamily="@font/rounded"
        android:paddingVertical="25dp"
        android:paddingHorizontal="30dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetAppButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/svg_orange_bblbtn"
        android:contentDescription="@string/reset_app_button"
        android:textSize="30sp"
        android:text="@string/resetApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/knicknack_medium"
        android:textColor="@color/white"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOutButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/svg_blue_bblbtn"
        android:contentDescription="@string/log_out_button"
        android:labelFor="@id/logOutButton"
        android:textSize="30sp"
        android:text="@string/logOut"
        android:fontFamily="@font/knicknack_medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetAppButton"
        android:layout_marginTop="15dp"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/doneButtonAccountDetails"
        android:layout_width="235dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/svg_green_bblbtn"
        android:textSize="30sp"
        android:fontFamily="@font/knicknack_medium"
        android:textColor="@color/white"
        android:text="@string/done"
        android:contentDescription="@string/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logOutButton"
        android:layout_marginTop="55dp"/>

    <FrameLayout
        android:id="@+id/popupFragmentContainer"
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <View
        android:id="@+id/dismissArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lowOpacityBlack"
        android:elevation="4dp"
        android:layout_marginBottom="-40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/popupFragmentContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>