<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_popup"
    tools:context=".screens.fragments.PasswordReentryFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="35dp"
        android:fontFamily="@font/rounded"
        android:text="@string/please_re_enter_your_password"
        android:textColor="@color/hint_text"
        android:textSize="24sp"

        app:layout_goneMarginTop="20dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="69dp" />

    <TextView
        android:fontFamily="@font/rounded"
        android:textSize="22sp"
        android:layout_marginTop="160dp"
        android:textColor="@color/hint_text"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:labelFor="@id/passwordInput"
        app:layout_constraintBottom_toTopOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:background="@drawable/userinput_design"
        android:fontFamily="@font/rounded"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingVertical="25dp"
        android:textColor="@color/hint_text"
        android:textSize="25sp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/doneButtonPasswordReentry"
        android:layout_width="235dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/svg_green_bblbtn"
        android:contentDescription="@string/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/knicknack_medium"
        android:labelFor="@id/doneButtonPasswordReentry"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/doneButtonPasswordReentry"
        app:layout_constraintEnd_toEndOf="@+id/doneButtonPasswordReentry"
        app:layout_constraintStart_toStartOf="@+id/doneButtonPasswordReentry"
        app:layout_constraintTop_toTopOf="@+id/doneButtonPasswordReentry">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>