<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.workout_activities.CreateRoutineActivity"
    android:background="@drawable/bg_purple_gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_spotty"/>

    <za.co.varsitycollege.st10204902.purrsonaltrainer.frontend_logic.GradientTextView
        android:id="@+id/untitledRoutineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/untitledRoutine"
        android:fontFamily="@font/knicknack_black"
        android:textSize="45sp"
        android:layout_marginTop="40dp"
        app:startColor="@color/untitled_routine_start_color"
        app:endColor="@color/untitled_routine_end_color"
        app:strokeColor="@color/default_stroke_color"
        app:strokeWidth="15dp"/>

    <TextView
        android:id="@+id/routineDetailsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routineDetails"
        android:fontFamily="@font/knicknack_medium"
        android:textSize="30sp"
        android:textColor="@color/workout_view_text"
        app:layout_constraintTop_toBottomOf="@id/untitledRoutineTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-10dp"/>


    <TextView
        android:id="@+id/colourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colour"
        android:fontFamily="@font/rounded"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginBottom="-5dp"
        app:layout_constraintBottom_toTopOf="@id/FILLER"
        app:layout_constraintStart_toStartOf="@+id/FILLER"
        android:layout_marginStart="40dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/FILLER"
        android:layout_width="360dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_start_workout_button"
        app:layout_constraintTop_toBottomOf="@id/routineDetailsHeading"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*THIS IS FILLER FOR POSITIONING*"
        android:fontFamily="@font/rounded"
        android:textSize="20sp"
        android:textColor="#CCCACA"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="@+id/FILLER"
        app:layout_constraintBottom_toBottomOf="@+id/FILLER"
        app:layout_constraintStart_toStartOf="@+id/FILLER"
        app:layout_constraintEnd_toEndOf="@id/FILLER"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/notesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:fontFamily="@font/rounded"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginBottom="-5dp"
        app:layout_constraintBottom_toTopOf="@id/notes"
        app:layout_constraintStart_toStartOf="@+id/FILLER"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/notes"
        android:layout_width="360dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_start_workout_button"
        app:layout_constraintTop_toBottomOf="@id/FILLER"/>

    <TextView
        android:id="@+id/addExercisesHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addExercises"
        android:fontFamily="@font/knicknack_medium"
        android:textSize="30sp"
        android:textColor="@color/workout_view_text"
        app:layout_constraintTop_toBottomOf="@id/notes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addExerciseButton"
        android:layout_width="360dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_start_workout_button"
        app:layout_constraintTop_toBottomOf="@id/addExercisesHeading"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addExercise"
        android:fontFamily="@font/rounded"
        android:textSize="25sp"
        android:textColor="#CCCACA"
        android:layout_gravity="center"
        android:layout_marginStart="65dp"
        app:layout_constraintTop_toTopOf="@+id/addExerciseButton"
        app:layout_constraintBottom_toBottomOf="@+id/addExerciseButton"
        app:layout_constraintStart_toStartOf="@+id/addExerciseButton"
        android:elevation="5dp"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@+id/addExerciseButton"
        app:layout_constraintBottom_toBottomOf="@+id/addExerciseButton"
        app:layout_constraintStart_toStartOf="@+id/addExerciseButton"
        android:src="@drawable/isco_add"
        android:layout_marginStart="35dp"
        android:elevation="5dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/doneButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/svg_green_bblbtn"
        android:elevation="5dp"
        android:fontFamily="@font/knicknack_medium"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>