<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.login_register.LoginFragment"
    android:background="@drawable/login_popup">

   <TextView
    android:id="@+id/welcomeMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcomeBack"
    android:fontFamily="@font/knicknack_medium"
    android:textColor="@color/hint_text"
    android:textSize="50sp"
    android:singleLine="false"
    android:ellipsize="none"
    android:maxLines="2"
    android:gravity="center"
    android:breakStrategy="high_quality"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="5dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/rounded"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/hint_text"
        android:layout_marginStart="35dp"
        app:layout_constraintBottom_toTopOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:background="@drawable/userinput_design"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:fontFamily="@font/rounded"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/hint_text"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:background="@drawable/userinput_design"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/loginButton"
        android:layout_width="280dp"
        android:layout_height="110dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/svg_orange_bblbtn"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/knicknack_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="@id/loginButton"
        android:layout_marginTop="5dp"
        android:textSize="60sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>